# fastapi-django-setup

./: .pre-commit-config.yaml  Dockerfile.dev  NOTES.md  README.md  compose.yaml  db.sqlite3  justfile  manage.py  pyproject.toml  pytest.ini
fastapi_django/: README.md  models.py
fastapi_django/models/: __init__.py  dict.py  fields.py  models.py  types.py
fastapi_django_test/: asgi.py  fastapi.py  main.py  manage.py  settings.py  urls.py  wsgi.py
fastapi_django_test/api/v1/: __init__.py
fastapi_django_test/api/v1/endpoints/: something.py
fastapi_django_test/api/v1/tests/: test_something.py
fastapi_django_test/api/v2/: __init__.py
fastapi_django_test/something/: admin.py  apps.py  dto.py  models.py
fastapi_django_test/something/migrations/: 0001_initial.py
fastapi_django_test/something/tests/: test_django.py
fastapi_django_test/tests/: test_django_admin.py  test_global_fastapi.py  test_hello_world.py
fastapi_django_test/utils/: namings.py
fastapi_django_test/utils/api/: route_names.py
fastapi_django_test/utils/models/: django.py
fastapi_django_test/utils/tests/: test_namings.py
tests/: test_models_create.py  test_models_dict.py
