[tool.poetry]
name = "fastapi-django"
version = "0.1.0"
description = ""
authors = ["David Danier <danier@team23.de>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
django = "^4.2.4"
a2wsgi = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
anyio = "^3.7.1"
httpx = "^0.24.1"
dirty-equals = "^0.6.0"
pytest-django = "^4.5.2"
ruff = "^0.0.284"
mypy = "^1.5.0"
django-stubs = "^4.2.3"

[tool.ruff]
select = ["F","E","W","C","I","N","UP","ANN","S","B","A","COM","C4","T20","PT","ARG","TD","RUF"]
line-length = 115
target-version = "py311"
ignore = ["A001","A002","A003","ANN101","ANN102","ANN401","C901","N8","B008","F405","F821","TD002","TD003"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"conftest.py" = ["S101","ANN","F401"]
"test_*.py" = ["S101","ANN","F401"]
"fastapi_django_test/something/migrations/*.py" = ["RUF012","ANN","E501"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "fastapi_django_test.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
